# Physical_Animation

./: CMakeLists.txt  README.md
A1/: CMakeLists.txt  main.cpp
A1/include/: backward_euler.h  d2V_spring_particle_particle_dq2.h  forward_euler.h  runge_kutta.h  symplectic_euler.h
A1/src/: d2V_spring_particle_particle_dq2.cpp  dV_spring_particle_particle_dq.cpp
A2/: CMakeLists.txt  main.cpp
A2/include/: fixed_point_constraints.h  linearly_implicit_euler.h
A2/src/: T_particle.cpp  V_gravity_particle.cpp  V_spring_particle_particle.cpp  assemble_forces.cpp  assemble_stiffness.cpp  d2V_spring_particle_particle_dq2.cpp  dV_gravity_particle_dq.cpp  dV_spring_particle_particle_dq.cpp  fixed_point_constraints.cpp  mass_matrix_particles.cpp
A3/: CMakeLists.txt  assignment_setup.h  main.cpp
A3/include/: implicit_euler.h  linearly_implicit_euler.h  newtons_method.h  quadrature_single_point.h
A3/src/: T_linear_tetrahedron.cpp  V_linear_tetrahedron.cpp  V_spring_particle_particle.cpp  assemble_forces.cpp  assemble_stiffness.cpp  build_skinning_matrix.cpp  d2V_linear_tetrahedron_dq2.cpp  d2psi_neo_hookean_dF2.cpp  dV_linear_tetrahedron_dq.cpp  dV_spring_particle_particle_dq.cpp  dphi_linear_tetrahedron_dX.cpp  dpsi_neo_hookean_dF.cpp  fixed_point_constraints.cpp  mass_matrix_linear_tetrahedron.cpp  mass_matrix_mesh.cpp  phi_linear_tetrahedron.cpp  pick_nearest_vertices.cpp  psi_neo_hookean.cpp
A4/: CMakeLists.txt  assignment_setup.h  main.cpp
A4/include/: dsvd.h  linearly_implicit_euler.h
A4/src/: V_membrane_corotational.cpp  V_spring_particle_particle.cpp  assemble_forces.cpp  assemble_stiffness.cpp  collision_detection_cloth_sphere.cpp  d2V_membrane_corotational_dq2.cpp  dV_cloth_gravity_dq.cpp  dV_membrane_corotational_dq.cpp  dphi_cloth_triangle_dX.cpp  mass_matrix_mesh.cpp  velocity_filter_cloth_sphere.cpp
A5/: CMakeLists.txt  README.tex.md  assignment_setup.h  main.cpp
A5/src/: inertia_matrix.cpp  pick_nearest_vertices.cpp  rigid_body_jacobian.cpp  rigid_to_world.cpp  rodrigues.cpp
